--- a/css/main.scss
+++ b/css/main.scss
@@ -128,16 +128,22 @@ body {
   object-fit: cover;
 }
 
+.grid-2 {
+  align-self: center;
+  max-width: 100vw;
+  width: 1350px;
+}
+
 .grid-2 > img.photo {
   flex: 1 0 0;
   object-fit: cover;
-  height: 1100px;
+  height: 900px;
 }
 
 .grid-3 {
   align-self: center;
-  width: 1500px;
   max-width: 100vw;
+  width: 1500px;
 }
 
 .grid-3 > img.photo {
