--- a/css/main.scss
+++ b/css/main.scss
@@ -128,44 +128,6 @@ body {
   object-fit: cover;
 }
 
-.grid-2 {
-  align-self: center;
-  max-width: 100vw;
-  width: 1350px;
-}
-
-.grid-2 > img.photo {
-  flex: 1 0 0;
-  object-fit: cover;
-  height: 900px;
-}
-
-.grid-3 {
-  align-self: center;
-  max-width: 100vw;
-  width: 1500px;
-}
-
-.grid-3 > img.photo {
-  flex: 1 0 0;
-  object-fit: cover;
-  height: 700px;
-}
-
-.photoset > .photo {
-  height: var(--photoset-img-height, 512px);
-}
-
-.photo.small {
-  height: var(--photoset-img-height, 374px);
-
-}
-
-.photo.xl {
-  height: var(--photoset-img-height, 920px);
-
-}
-
-.photoset > .key {
-  width: 100%;
+.photo {
+  max-width: 95vw;
 }
