implement clear and undo

--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,3 @@
-/*
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-*/
-
 :root {
     --content-wrapper-padding: 120px 120px;
     --title-size: 50px;
@@ -98,7 +57,8 @@ a:hover {
 }
 
 body {
-    font: var(--base-font-size) / var(--base-line-height) 'Helvetica Neue',
+    font:
+        var(--base-font-size) / var(--base-line-height) 'Helvetica Neue',
         sans-serif;
     color: var(--base-text-color);
     background-color: var(--base-background-color);
@@ -183,5 +143,3 @@ body ::selection {
 .photo {
     max-width: 95vw;
 }
-
-/*# sourceMappingURL=main.css.map */
