--- a/src/queens.css
+++ b/src/queens.css
@@ -30,6 +30,8 @@
     grid-template-rows: repeat(var(--rows), var(--cell-size));
     column-gap: 2px;
     row-gap: 2px;
+    border: 4px solid black;
+    border-radius: 4px;
 }
 
 .cell {
