--- a/src/queens.css
+++ b/src/queens.css
@@ -67,6 +67,21 @@
     justify-content: center;
 }
 
+.invalid-cell {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: repeating-linear-gradient(
+        45deg,
+        red,
+        red 4px,
+        transparent 4px,
+        transparent 8px
+    );
+}
+
 .color-0 {
     background-color: #ffd765;
     /* Vibrant Yellow */
