--- a/brianl.am/src/queens.css
+++ b/brianl.am/src/queens.css
@@ -77,18 +77,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: border-width 2s ease 0s;
 }
 
-/* top: calc(var(--cell-size) / 2); */
+.cell-win {
+    border-width: 0;
+}
+
 .cell > * {
     transition:
         filter 2s ease 3s,
-        transform 2s ease 4s;
+        transform 2s ease 5s;
 }
+
 .cell-win > * {
     animation: grow-shrink 3s linear 1s 1 alternate;
     filter: grayscale(100%);
-    transform: rotate(180deg);
+    transform: translateY(calc(-1 * var(--num-row) * (var(--cell-size) + 2px)));
 }
 
 .invalid-cell {
@@ -105,6 +110,46 @@
         var(--cell-color) 4px,
         var(--cell-color) 8px
     );
+}
+
+.row-0 {
+    --num-row: 0;
+}
+.row-1 {
+    --num-row: 1;
+}
+.row-2 {
+    --num-row: 2;
+}
+.row-3 {
+    --num-row: 3;
+}
+.row-4 {
+    --num-row: 4;
+}
+.row-5 {
+    --num-row: 5;
+}
+.row-6 {
+    --num-row: 6;
+}
+.row-7 {
+    --num-row: 7;
+}
+.row-8 {
+    --num-row: 8;
+}
+.row-9 {
+    --num-row: 9;
+}
+.row-10 {
+    --num-row: 10;
+}
+.row-11 {
+    --num-row: 11;
+}
+.row-12 {
+    --num-row: 12;
 }
 
 .color-0 {
