--- a/brianl.am/src/queens.css
+++ b/brianl.am/src/queens.css
@@ -80,19 +80,22 @@
     transition: border-width 2s ease 0s;
 }
 
-.cell-win {
-    border-width: 0;
+.ruled > * {
+    opacity: 100%;
+    transition: opacity 0.5s ease 1s;
+}
+.cell-win.ruled > * {
+    opacity: 0%;
 }
 
-.cell > * {
+.queen > * {
     transition:
         filter 2s ease 3s,
         transform 2s ease 5s;
 }
 
-.cell-win > * {
-    animation: grow-shrink 3s linear 1s 1 alternate;
-    filter: grayscale(100%);
+.cell-win.queen > * {
+    animation: grow-shrink 1s ease-in 1s 2 alternate;
     transform: translateY(calc(-1 * var(--num-row) * (var(--cell-size) + 2px)));
 }
 
