--- a/brianl.am/src/queens.css
+++ b/brianl.am/src/queens.css
@@ -303,6 +303,10 @@
     background-color: rgba(255, 215, 0, 0.7);
 }
 
+.today {
+    background-color: rgba(255, 20, 0, 0.7);
+}
+
 .has-board > a:hover {
     color: white;
 }
