--- a/brianl.am/src/queens.css
+++ b/brianl.am/src/queens.css
@@ -321,7 +321,7 @@
 }
 
 .today {
-    background-color: rgba(255, 20, 0, 0.7);
+    border: 2px solid rgba(255, 20, 0, 0.7);
 }
 
 .has-board > a:hover {
