--- a/brianl.am/src/App.css
+++ b/brianl.am/src/App.css
@@ -143,3 +143,45 @@ body ::selection {
 .photo {
     max-width: 95vw;
 }
+
+.handwave {
+    animation: wave infinite 6s;
+    display: inline-block;
+}
+@keyframes wave {
+    /* Beginning */
+    0% {
+        translate: 5px -5px;
+        rotate: 0deg;
+    }
+
+    /* Apex of wave 1 */
+    5% {
+        translate: -5px 7px;
+        rotate: -8deg;
+    }
+
+    /* End of wave 1 */
+    10% {
+        translate: 3px -4px;
+        rotate: 2deg;
+    }
+
+    /* Apex of wave 2 */
+    15% {
+        translate: -5px 7px;
+        rotate: -8deg;
+    }
+
+    /* End of wave 2 */
+    20% {
+        translate: 5px -5px;
+        rotate: 2deg;
+    }
+
+    /* Delay */
+    100% {
+        translate: 5px -5px;
+        rotate: 2deg;
+    }
+}
