--- a/brianl.am/src/App.css
+++ b/brianl.am/src/App.css
@@ -186,3 +186,40 @@ body ::selection {
         rotate: 2deg;
     }
 }
+
+.lightbox {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.lightbox .background {
+    position: absolute;
+    background-color: black;
+    opacity: 90%;
+    width: 100%;
+    height: 100%;
+}
+
+.lightbox img {
+    max-height: 90%;
+    max-width: 90%;
+    opacity: 0;
+    transition: opacity 1s;
+    z-index: 3;
+}
+
+img.opened {
+    opacity: 1;
+}
+
+.lightbox.open {
+    display: flex;
+    opacity: 1;
+    z-index: 2;
+}
