--- a/brianl.am/src/App.css
+++ b/brianl.am/src/App.css
@@ -107,14 +107,25 @@ body ::selection {
     color: #444;
 }
 
+.essay-title-container {
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    left: 20px;
+    color: white;
+}
+
 .essay-title {
     font-size: 72px;
     font-weight: 500;
     margin: 0;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+    width: 100%;
 }
 
 .essay-subtitle {
-    font-size: 24px;
+    font-size: 36px;
 }
 
 .photoset {
@@ -138,7 +149,7 @@ body ::selection {
 .cover-container {
     height: 100vh;
     width: 100%;
-    padding-bottom: 32px;
+    padding-bottom: 72px;
 }
 
 .cover {
