--- a/brianl.am/src/App.css
+++ b/brianl.am/src/App.css
@@ -217,8 +217,9 @@ body ::selection {
     max-height: 90%;
     max-width: 90%;
     opacity: 0;
-    transition: opacity 1s;
+    transition: opacity 0.5s ease-in-out;
     z-index: 3;
+    cursor: none;
 }
 
 img.opened {
